--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>My Personal Research Website</title>
     <style>
       .jumbotron {
-        background-image: url("https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80");
+        background-image: url('https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80');
         background-size: cover;
         color: aliceblue;
       }
@@ -197,6 +197,7 @@
       </p>
     </section>
     <!-- Footer -->
+    <hr />
     <footer class="container">
       <p class="float-right">
         <a href="#">Back to top</a>
