--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
       <p>
         Hi, my name is Weihao Chen (陳威豪). I'm a second-year Ph.D. student in
         the Department of Computer Science at Purdue University, and a member of
-        the Human-Centered Software Systems Lab led by Professor Tianyi Zhang.
-        My research focuses on Human-Computer Interaction (HCI) and Data
-        Science, and I'm currently developing tools to help data scientists.
-        Prior to my studies at Purdue, I worked as a software engineer at
-        Realtek Semiconductor, Taiwan from 2017 to 2021.
+        the Human-Centered Software Systems Lab led by Professor
+        <a href="https://tianyi-zhang.github.io/">Tianyi Zhang</a>. My research
+        focuses on Human-Computer Interaction (HCI) and Data Science, and I'm
+        currently developing tools to help data scientists. Prior to my studies
+        at Purdue, I worked as a software engineer at Realtek Semiconductor,
+        Taiwan from 2017 to 2021.
       </p>
     </section>
     <br />
