--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>My Personal Research Website</title>
     <style>
       .jumbotron {
-        background-image: url('https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80');
+        background-image: url("https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80");
         background-size: cover;
         color: aliceblue;
       }
@@ -103,35 +103,20 @@
       <!-- MIWA project-->
       <div class="card">
         <div class="card-header">
-          <h3>
-            MIWA: Mixed-Initiative Web Automation for Better User Control and
-            Confidence
-          </h3>
+          <h3>Mixed-Initiative Web Automation tool</h3>
         </div>
         <div class="card-body">
           <!--make it foldable-->
           <p>
-            <strong>Abstract:</strong> In the era of Big Data, web scraping is
-            frequently used by data scientists, domain experts, and end-users to
-            finish time-consuming but essential data collection tasks. However,
-            developing web automation scripts requires familiarity with a
-            programming language and HTML, which remains a key learning barrier
-            for non-expert users. We provide MIWA, a mixed-initiative web
-            automation system that enables users to create web scraping programs
-            by demonstrating what contents they want from the targeted websites.
-            Compared with existing web automation tools, MIWA helps users better
-            understand a generated program and build trust in it by (1)
-            providing a step-by-step explanation of script behavior with visual
-            correspondence to the target website, (2) supporting fine-grained
-            control over web automation, and (3) automatically detecting
-            potential corner cases that are handled improperly by the generated
-            program. Besides, MIWA provides greater autonomy and control to
-            users with features such as undo/redo previous demonstration steps.
-            We conducted a within-subjects user study with 24 participants and
-            compared MIWA with Rousillon, a state-of-the-art web automation
-            tool. Results show that, compared with Rousillon, MIWA reduced the
-            task completion time by half while helping participants gain more
-            confidence on the generated script.
+            We introduce MIWA, a mixed-initiative web automation system. It
+            helps users make web scraping programs by showing what content they
+            want from websites. MIWA is better than existing tools because it
+            gives step-by-step explanation with visuals, allows more control,
+            and automatically finds corner cases. It also has undo/redo features
+            for more freedom. A study with 24 people showed that MIWA cut task
+            completion time in half and made users more confident in the
+            generated script compared to Rousillon, a popular web automation
+            tool.
           </p>
           <p>
             <strong>Keywords:</strong> Programming by Demonstration, Web
@@ -155,24 +140,16 @@
         <div class="card-body">
           <!--make it foldable-->
           <p>
-            <strong>Abstract:</strong> In the era of big data, data scientists
-            play key roles in gaining valuable insights from data in almost
-            every industry and academic field. Despite the widespread use of
-            data science, our understanding of data scientists’ coding behavior
-            remains insufficient. Previous scientific studies on data science
-            practices have been conducted by mining the code from GitHub
-            repositories or Kaggle. However, previous work only provides a
-            snapshot of their coding behavior since most of the collected source
-            codes are presented in the final form, revealing little evidence of
-            their behavior at the action level. Compared to the previous work,
-            we analyzed the source code of all execution histories and error
-            logs to gain a deeper understanding of their behavior. Our work
-            identified the prevalent mistakes made by data scientists, the
-            strategies they use to repair them, and the action-level patterns of
-            data science coding and debugging. Finally, we compared our findings
-            with previous work and demonstrated the implications of more
-            effective data science supporting tools, providing a more nuanced
-            understanding of data scientists.
+            Data scientists play an important role in getting useful information
+            from data in many businesses and research areas. Even though data
+            science is used a lot, we don't know much about how data scientists
+            code. Previous studies got code from GitHub and Kaggle, but this
+            only showed the finished product. Our study looked at all the
+            running history and error logs to get a better understanding. We
+            found out the mistakes data scientists make, how they try to fix
+            them, and the patterns of coding and debugging. Finally, we compared
+            our results to previous studies and showed how better tools can help
+            data scientists.
           </p>
           <p>
             <strong>Keywords:</strong> Data Science, Jupyter Notebook,
