change paper description

--- a/index.html
+++ b/index.html
@@ -108,15 +108,14 @@
         <div class="card-body">
           <!--make it foldable-->
           <p>
-            We introduce MIWA, a mixed-initiative web automation system. It
-            helps users make web scraping programs by showing what content they
-            want from websites. MIWA is better than existing tools because it
-            gives step-by-step explanation with visuals, allows more control,
-            and automatically finds corner cases. It also has undo/redo features
-            for more freedom. A study with 24 people showed that MIWA cut task
-            completion time in half and made users more confident in the
-            generated script compared to Rousillon, a popular web automation
-            tool.
+            We introduce a mixed-initiative web automation system that helps
+            users create web scraping programs automatically. It is superior to
+            existing tools, as it provides step-by-step explanations with
+            visuals, allows more control, and automatically finds corner cases.
+            Additionally, it has undo/redo features for greater freedom. A study
+            with 24 people showed that our tool reduced task completion time by
+            half and made users more confident in the generated script compared
+            to a state-of-the-art web automation tool.
           </p>
           <p>
             <strong>Keywords:</strong> Programming by Demonstration, Web
