--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <!-- MIWA project-->
       <div class="card">
         <div class="card-header">
-          <h3>Mixed-Initiative Web Automation tool</h3>
+          <h3>Web Automation tool</h3>
         </div>
         <div class="card-body">
           <!--make it foldable-->
