--- a/index.html
+++ b/index.html
@@ -1,188 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
-    <meta http-equiv="pragma" content="no-cache" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet" />
 
-    <title>My Personal Research Website</title>
-    <style>
-      .jumbotron {
-        background-image: url("https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80");
-        background-size: cover;
-        color: aliceblue;
-      }
-    </style>
-  </head>
-  <body style="font-family: Avenir; color: #444444">
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Weihao Chen (陳威豪）</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#research">Research</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#cv">CV</a>
-          </li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="cache-control" content="no-cache" />
+  <meta http-equiv="expires" content="0" />
+  <meta http-equiv="pragma" content="no-cache" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+  <!-- <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet" /> -->
+  <!-- use roboto font -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <title>My Personal Research Website</title>
+  <style>
+    .jumbotron {
+      background-image: url("https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80");
+      background-size: cover;
+      color: aliceblue;
+    }
+  </style>
+</head>
+
+<body style="font-family: Avenir; color: #444444">
+  <!-- Navigation Bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Weihao Chen (陳威豪）</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#about">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#research">Research</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#cv">CV</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <!-- Header -->
+  <header class="jumbotron text-center">
+    <h1 class="display-4">Welcome to My Personal Research Website</h1>
+    <p class="lead">
+      Hi there, this is Weihao. A HCI and data science researcher.
+    </p>
+  </header>
+  <!-- About Section -->
+  <section id="about" class="container">
+    <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
+      About Me
+    </h2>
+    <br />
+    <!-- add a random picture avatar at left -->
+    <img src="pic.jpg" alt="Weihao Chen" class="float-left rounded-circle" width="150" height="150"
+      style="margin-right: 10px" />
+    <p>
+      Hi, my name is Weihao Chen (陳威豪). I'm a second-year Ph.D. student in
+      the Department of Computer Science at Purdue University, and a member of
+      the Human-Centered Software Systems Lab led by Professor
+      <a href="https://tianyi-zhang.github.io/">Tianyi Zhang</a>. My research
+      focuses on Human-Computer Interaction (HCI) and Data Science, and I'm
+      currently developing tools to help data scientists. Prior to my studies
+      at Purdue, I worked as a software engineer at Realtek Semiconductor,
+      Taiwan from 2017 to 2021.
+    </p>
+  </section>
+  <br />
+  <br />
+  <br />
+  <!-- Publications Section -->
+  <section id="research" class="container">
+    <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
+      Research Projects
+    </h2>
+    <br />
+    <!-- MIWA project-->
+    <div class="card">
+      <div class="card-header">
+        <h3>Web Automation for Data Collection</h3>
       </div>
-    </nav>
-    <!-- Header -->
-    <header class="jumbotron text-center">
-      <h1 class="display-4">Welcome to My Personal Research Website</h1>
-      <p class="lead">
-        Hi there, this is Weihao. A HCI and data science researcher.
-      </p>
-    </header>
-    <!-- About Section -->
-    <section id="about" class="container">
-      <h2
-        class="text-left"
-        style="text-decoration-line: underline; text-decoration-style: solid"
-      >
-        About Me
-      </h2>
-      <br />
-      <!-- add a random picture avatar at left -->
-      <img
-        src="pic.jpg"
-        alt="Weihao Chen"
-        class="float-left rounded-circle"
-        width="150"
-        height="150"
-        style="margin-right: 10px"
-      />
-      <p>
-        Hi, my name is Weihao Chen (陳威豪). I'm a second-year Ph.D. student in
-        the Department of Computer Science at Purdue University, and a member of
-        the Human-Centered Software Systems Lab led by Professor
-        <a href="https://tianyi-zhang.github.io/">Tianyi Zhang</a>. My research
-        focuses on Human-Computer Interaction (HCI) and Data Science, and I'm
-        currently developing tools to help data scientists. Prior to my studies
-        at Purdue, I worked as a software engineer at Realtek Semiconductor,
-        Taiwan from 2017 to 2021.
-      </p>
-    </section>
-    <br />
-    <br />
-    <br />
-    <!-- Publications Section -->
-    <section id="research" class="container">
-      <h2
-        class="text-left"
-        style="text-decoration-line: underline; text-decoration-style: solid"
-      >
-        Research Projects
-      </h2>
-      <br />
-      <!-- MIWA project-->
-      <div class="card">
-        <div class="card-header">
-          <h3>Web Automation for Data Collection</h3>
-        </div>
-        <div class="card-body">
-          <!--make it foldable-->
-          <p>
-            We introduce a mixed-initiative web automation system that helps
-            users create web scraping programs automatically. It is superior to
-            existing tools, as it provides step-by-step explanations with
-            visuals, allows more control, and automatically finds corner cases.
-            Additionally, it has undo/redo features for greater freedom. A study
-            with 24 people showed that our tool reduced task completion time by
-            half and made users more confident in the generated script compared
-            to a state-of-the-art web automation tool.
+      <div class="card-body">
+        <!--make it foldable-->
+        <p>
+          We introduce a mixed-initiative web automation system that helps
+          users create web scraping programs automatically. It is superior to
+          existing tools, as it provides step-by-step explanations with
+          visuals, allows more control, and automatically finds corner cases.
+          Additionally, it has undo/redo features for greater freedom. A study
+          with 24 people showed that our tool reduced task completion time by
+          half and made users more confident in the generated script compared
+          to a state-of-the-art web automation tool.
+        </p>
+        <p>
+          <strong>Keywords:</strong> Programming by Demonstration, Web
+          Automation, Data Science
+        </p>
+        <p>
+          <strong>Publication:</strong>
+          <!-- MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence
+            UIST '23: Proceedings of the 36th Annual ACM Symposium on User Interface Software and Technology -->
+          <!-- list paper -->
+        <ul>
+          <li>
+            MIWA: Mixed-Initiative Web Automation for Better User Control
+            and Confidence
+            <br />
+            <strong>Weihao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam
+            Zhicheng Huang, Rui Dong, Xinyu Wang, Tianyi Zhang
+
+            <br />
+            <i>
+              UIST '23: Proceedings of the 36th Annual ACM Symposium on User
+              Interface Software and Technology
+            </i>
+
+          </li>
           </p>
-          <p>
-            <strong>Keywords:</strong> Programming by Demonstration, Web
-            Automation, Data Science
-          </p>
-          <p>
-            <strong>Publication:</strong> <a href="https://dl.acm.org">N/A</a>
-          </p>
-        </div>
       </div>
-      <!--space-->
-      <br />
-      <!-- Coding behavior-->
-      <div class="card">
-        <div class="card-header">
-          <h3>
-            Understanding the Coding Behavior of Data Scientists at the Action
-            Level
-          </h3>
-        </div>
-        <div class="card-body">
-          <!--make it foldable-->
-          <p>
-            Data scientists play an important role in getting useful information
-            from data in many businesses and research areas. Even though data
-            science is used a lot, we don't know much about how data scientists
-            code. Previous studies got code from GitHub and Kaggle, but this
-            only showed the finished product. Our study looked at all the
-            running history and error logs to get a better understanding. We
-            found out the mistakes data scientists make, how they try to fix
-            them, and the patterns of coding and debugging. Finally, we compared
-            our results to previous studies and showed how better tools can help
-            data scientists.
-          </p>
-          <p>
-            <strong>Keywords:</strong> Data Science, Jupyter Notebook,
-            Programming Behavior
-          </p>
-          <p>
-            <strong>Publication:</strong> <a href="https://dl.acm.org">N/A</a>
-          </p>
-        </div>
-      </div>
-    </section>
+    </div>
+    <!--space-->
     <br />
-    <!-- cv Section -->
-    <section id="cv" class="container">
-      <h2
-        class="text-left"
-        style="text-decoration-line: underline; text-decoration-style: solid"
-      >
-        CV
-      </h2>
-      <!-- cv -->
-      <iframe src="Weihao_Chen_CV.pdf" width="100%" height="500px"></iframe>
-      <p>
-        If you have any questions, please feel free to contact via
-        <a href="mailto:chen4129@purdue.edu">email</a>.
-      </p>
-    </section>
-    <!-- Footer -->
-    <hr />
-    <footer class="container">
-      <p class="float-right">
-        <a href="#">Back to top</a>
-      </p>
-      <p>&copy 2023 Weihao Chen <a href="#"></a></p>
-    </footer>
-  </body>
+    <!-- Coding behavior-->
+    <div class="card">
+      <div class="card-header">
+        <h3>
+          Understanding the Coding Behavior of Data Scientists at the Action
+          Level
+        </h3>
+      </div>
+      <div class="card-body">
+        <!--make it foldable-->
+        <p>
+          Data scientists play an important role in getting useful information
+          from data in many businesses and research areas. Even though data
+          science is used a lot, we don't know much about how data scientists
+          code. Previous studies got code from GitHub and Kaggle, but this
+          only showed the finished product. Our study looked at all the
+          running history and error logs to get a better understanding. We
+          found out the mistakes data scientists make, how they try to fix
+          them, and the patterns of coding and debugging. Finally, we compared
+          our results to previous studies and showed how better tools can help
+          data scientists.
+        </p>
+        <p>
+          <strong>Keywords:</strong> Data Science, Jupyter Notebook,
+          Programming Behavior
+        </p>
+        <p>
+          <strong>Publication:</strong> <a href="https://dl.acm.org">N/A</a>
+        </p>
+      </div>
+    </div>
+  </section>
+  <br />
+  <!-- cv Section -->
+  <section id="cv" class="container">
+    <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
+      CV
+    </h2>
+    <!-- cv -->
+    <iframe src="Weihao_Chen_CV.pdf" width="100%" height="500px"></iframe>
+    <p>
+      If you have any questions, please feel free to contact via
+      <a href="mailto:chen4129@purdue.edu">email</a>.
+    </p>
+  </section>
+  <!-- Footer -->
+  <hr />
+  <footer class="container">
+    <p class="float-right">
+      <a href="#">Back to top</a>
+    </p>
+    <p>&copy 2023 Weihao Chen <a href="#"></a></p>
+  </footer>
+</body>
+
 </html>
