use animation for the title

--- a/index.html
+++ b/index.html
@@ -11,18 +11,12 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
   <!-- <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet" /> -->
   <!-- use roboto font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
   <title>My Personal Research Website</title>
-  <style>
-    .jumbotron {
-      background-image: url("https://images.unsplash.com/photo-1463797221720-6b07e6426c24?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2671&q=80");
-      background-size: cover;
-      color: aliceblue;
-    }
-  </style>
+
 </head>
 
-<body style="font-family: Avenir; color: #444444">
+<body>
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Weihao Chen (陳威豪）</a>
@@ -46,8 +40,8 @@
   </nav>
   <!-- Header -->
   <header class="jumbotron text-center">
-    <h1 class="display-4">Welcome to My Personal Research Website</h1>
-    <p class="lead">
+    <h1 class="display-4 heading-primary-main">Welcome to My Personal Research Website</h1>
+    <p class="lead heading-primary-sub">
       Hi there, this is Weihao. A HCI and data science researcher.
     </p>
   </header>
@@ -61,14 +55,12 @@
     <img src="pic.jpg" alt="Weihao Chen" class="float-left rounded-circle" width="150" height="150"
       style="margin-right: 10px" />
     <p>
-      Hi, my name is Weihao Chen (陳威豪). I'm a second-year Ph.D. student in
+      Hi, my name is Weihao Chen (陳威豪). I'm a third-year Ph.D. student in
       the Department of Computer Science at Purdue University, and a member of
       the Human-Centered Software Systems Lab led by Professor
       <a href="https://tianyi-zhang.github.io/">Tianyi Zhang</a>. My research
-      focuses on Human-Computer Interaction (HCI) and Data Science, and I'm
-      currently developing tools to help data scientists. Prior to my studies
-      at Purdue, I worked as a software engineer at Realtek Semiconductor,
-      Taiwan from 2017 to 2021.
+      focuses on Human-Computer Interaction (HCI), Software Engineering, and Data Science, and I'm
+      currently developing tools to help data scientists.
     </p>
   </section>
   <br />
@@ -117,9 +109,7 @@
         </p>
         <p>
           <strong>Publication:</strong>
-          <!-- MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence
-            UIST '23: Proceedings of the 36th Annual ACM Symposium on User Interface Software and Technology -->
-          <!-- list paper -->
+
         <ul>
           <li>
             MIWA: Mixed-Initiative Web Automation for Better User Control
@@ -136,7 +126,8 @@
             <br />
             [paper] [video] [slides]
           </li>
-          </p>
+        </ul>
+        </p>
       </div>
     </div>
     <!--space-->
