remove cv part and linked the cv to the dropbox link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a class="nav-link" href="#research">Research</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#cv">CV</a>
+          <a class="nav-link" href="https://app.box.com/s/8xyr0jk1n5j53lqp9xo159qu2ip7t6wy">CV</a>
         </li>
       </ul>
     </div>
@@ -173,17 +173,17 @@
   </section>
   <br />
   <!-- cv Section -->
-  <section id="cv" class="container">
+  <!-- <section id="cv" class="container">
     <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
       CV
     </h2>
-    <!-- cv -->
+
     <iframe src="Weihao_Chen_CV.pdf" width="100%" height="500px"></iframe>
     <p>
       If you have any questions, please feel free to contact via
       <a href="mailto:chen4129@purdue.edu">email</a>.
     </p>
-  </section>
+  </section> -->
   <!-- Footer -->
   <hr />
   <footer class="container">
