add news section

--- a/index.html
+++ b/index.html
@@ -170,21 +170,39 @@
         </p>
       </div>
     </div>
+    <br />
+    <section id="news" class="newslist">
+      <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
+        News
+      </h2>
+      <div class="attending-item">
+        <div class="attending-date">09/2023</div>
+        <div class="attending-event">I am Graduate TA for CS 240: Programming in C at Purdue University.</div>
+      </div>
+      <div class="attending-item">
+        <div class="attending-date">07/2023</div>
+        <div class="attending-event">Our paper: MIWA: Mixed-Initiative Web Automation for Better User Control and
+          Confidence is accepted by UIST 2023. 🎉 </div>
+      </div>
+      <div class="attending-item">
+        <div class="attending-date">05/2022</div>
+        <div class="attending-event">I start my internship at Intel Corporation.</div>
+      </div>
+      <div class="attending-item">
+        <div class="attending-date">01/2022</div>
+        <div class="attending-event">I am Graduate TA for CS 180: Problem Solving And Object-Oriented Programming.</div>
+      </div>
+      <div class="attending-item">
+        <div class="attending-date">09/2021</div>
+        <div class="attending-event">I am Graduate TA for CS 240: Programming in C at Purdue University.</div>
+      </div>
+      <div class="attending-item">
+        <div class="attending-date">09/2021</div>
+        <div class="attending-event">I join Purdue University 🚂 as an PhD student in Computer Science.</div>
+      </div>
+    </section>
   </section>
-  <br />
-  <!-- cv Section -->
-  <!-- <section id="cv" class="container">
-    <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
-      CV
-    </h2>
 
-    <iframe src="Weihao_Chen_CV.pdf" width="100%" height="500px"></iframe>
-    <p>
-      If you have any questions, please feel free to contact via
-      <a href="mailto:chen4129@purdue.edu">email</a>.
-    </p>
-  </section> -->
-  <!-- Footer -->
   <hr />
   <footer class="container">
     <p class="float-right">
