--- a/index.html
+++ b/index.html
@@ -110,23 +110,15 @@
         <p>
           <strong>Publication:</strong>
 
-        <ul>
-          <li>
-            MIWA: Mixed-Initiative Web Automation for Better User Control
-            and Confidence
-            <br />
-            <strong>Weihao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam
-            Zhicheng Huang, Rui Dong, Xinyu Wang, Tianyi Zhang
-
-            <br />
-            <i>
-              UIST '23: Proceedings of the 36th Annual ACM Symposium on User
-              Interface Software and Technology
-            </i>
-            <br />
-            [paper] [video] [slides]
-          </li>
-        </ul>
+        <div class="paper-item">
+          <div class="paper-title">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</div>
+          <div class="paper-authors"><strong>Weihao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam Zhicheng
+            Huang,
+            Rui Dong, Xinyu
+            Wang, Tianyi Zhang</div>
+          <div class="paper-venue">UIST 23: Proceedings of the 36th Annual ACM Symposium on User Interface Software and
+            Technology</div>
+        </div>
         </p>
       </div>
     </div>
@@ -181,8 +173,8 @@
       </div>
       <div class="attending-item">
         <div class="attending-date">07/2023</div>
-        <div class="attending-event">Our paper: MIWA: Mixed-Initiative Web Automation for Better User Control and
-          Confidence is accepted by UIST 2023. 🎉 </div>
+        <div class="attending-event">Our paper - MIWA: Mixed-Initiative Web Automation for Better User Control and
+          Confidence is accepted by UIST 2023 🎉. </div>
       </div>
       <div class="attending-item">
         <div class="attending-date">05/2022</div>
