--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <!-- <link href="https://fonts.cdnfonts.com/css/avenir" rel="stylesheet" /> -->
   <!-- use roboto font -->
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+
+
   <title>My Personal Research Website</title>
 
 </head>
@@ -67,6 +70,31 @@
   <br />
   <br />
   <!-- Publications Section -->
+  <section id="publication" class="container">
+    <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
+      Publications
+    </h2>
+    <div class="paper-item">
+      <div class="paper-title">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</div>
+      <div class="paper-authors"><strong>Weihao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam Zhicheng
+        Huang,
+        Rui Dong, Xinyu
+        Wang, Tianyi Zhang</div>
+      <div class="paper-venue">UIST 23: Proceedings of the 36th Annual ACM Symposium on User Interface Software and
+        Technology</div>
+      <div class="paper-resources">
+        <a href="MIWA.pdf">
+          <i class="fa-solid fa-file-pdf"></i>
+          pdf
+        </a>
+        <a href="https://github.com/ferranschen/MIWA">
+          <i class="fa-brands fa-github"></i>
+          code
+        </a>
+      </div>
+  </section>
+
+  <!-- Research Section -->
   <section id="research" class="container">
     <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
       Research Projects
@@ -78,7 +106,6 @@
         <h3>Web Automation for Data Collection</h3>
       </div>
       <div class="card-body">
-        <!--make it foldable-->
         <p>
           Web automation is frequently used by data scientists, domain experts, and programmers to complete
           time-consuming data
