--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Weihao Chen (陳威豪）</a>
+    <a class="navbar-brand" href="#">Wei-Hao Chen (陳威豪）</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
   <header class="jumbotron text-center">
     <h1 class="display-4 heading-primary-main">Welcome to My Personal Research Website</h1>
     <p class="lead heading-primary-sub">
-      Hi there, this is Weihao. A HCI and data science researcher.
+      Hi there, this is Wei-Hao. A HCI and data science researcher.
     </p>
   </header>
   <!-- About Section -->
@@ -54,11 +54,10 @@
       About Me
     </h2>
     <br />
-    <!-- add a random picture avatar at left -->
-    <img src="pic.jpg" alt="Weihao Chen" class="float-left rounded-circle" width="150" height="150"
+    <img src="pic.jpg" alt="Wei-Hao Chen" class="float-left rounded-circle" width="150" height="150"
       style="margin-right: 10px" />
     <p>
-      Hi, my name is Weihao Chen (陳威豪). I'm a third-year Ph.D. student in
+      Hi, my name is Wei-Hao Chen (陳威豪). I'm a third-year Ph.D. student in
       the Department of Computer Science at Purdue University, and a member of
       the Human-Centered Software Systems Lab led by Professor
       <a href="https://tianyi-zhang.github.io/">Tianyi Zhang</a>. My research
@@ -67,8 +66,7 @@
     </p>
   </section>
   <br />
-  <br />
-  <br />
+
   <!-- Publications Section -->
   <section id="publication" class="container">
     <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
@@ -76,7 +74,7 @@
     </h2>
     <div class="paper-item">
       <div class="paper-title">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</div>
-      <div class="paper-authors"><strong>Weihao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam Zhicheng
+      <div class="paper-authors"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam Zhicheng
         Huang,
         Rui Dong, Xinyu
         Wang, Tianyi Zhang</div>
@@ -93,7 +91,7 @@
         </a>
       </div>
   </section>
-
+  <br />
   <!-- Research Section -->
   <section id="research" class="container">
     <h2 class="text-left" style="text-decoration-line: underline; text-decoration-style: solid">
@@ -139,7 +137,7 @@
 
         <div class="paper-item">
           <div class="paper-title">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</div>
-          <div class="paper-authors"><strong>Weihao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam Zhicheng
+          <div class="paper-authors"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam Zhicheng
             Huang,
             Rui Dong, Xinyu
             Wang, Tianyi Zhang</div>
@@ -227,7 +225,7 @@
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>&copy 2023 Weihao Chen <a href="#"></a></p>
+    <p>&copy 2023 Wei-Hao Chen <a href="#"></a></p>
   </footer>
 </body>
 
