--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="cache-control" content="no-cache" />
   <meta http-equiv="expires" content="0" />
   <meta http-equiv="pragma" content="no-cache" />
+  <meta name="description"
+    content="Wei-Hao Chen, a third-year Ph.D. student in Computer Science at Purdue University, focuses on Human-AI Interaction, Software Engineering, and Artificial Intelligence in the Human-Centered Software Systems Lab. With experience at Realtek Semiconductor and a background in Cryptography, he develops tools for data science. Enjoys travel, gaming, and cats.">
+  <meta name="keywords" content="Wei-Hao Chen, Purdue University, Computer Science, Human-AI Interaction, Software Engineering, Artificial Intelligence, Realtek Semiconductor, Cryptography, Data Science, Programming by Demonstration, LLM, Artificial Intelligence, MIWA, Web Automation, Data Collection, Jupyter Notebook, Programming Behavior">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
 
