--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="./tailwind.js"></script>
 
   <title>My Personal Research Website</title>
 
