--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <p class="flex-1 leading-relaxed">
         Hello, my name is Wei-Hao Chen. I am a third-year Ph.D. student in the Department of Computer Science at Purdue
         University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
-        research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human-AI Interaction (HAI)</span>, <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
+        research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human Computer Interaction (HCI)</span>, <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
           Artificial Intelligence</span>. I am currently developing tools to help data scientists using several techniques 
           such as 
           <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>,
