--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="pic.jpg" alt="Wei-Hao Chen" class="rounded-full mr-4 float-left w-36 h-36 shadow-xl" />
 
         <p class="flex-1 leading-relaxed">
-          Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a third-year Ph.D. student in the Department of Computer Science at Purdue
+          Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in the Department of Computer Science at Purdue
           University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
           research primarily focuses on <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human Computer Interaction (HCI)</span>, <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span>, and <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
             Artificial Intelligence</span>. I am currently developing tools to help data scientists using several techniques 
