--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="text-slate-700 bg-gray-100">
+<body class="text-slate-700 bg-gray-100 text-sm">
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
     <!-- About Section -->
     <section id="about" class="px-6 py-8">
@@ -68,21 +68,20 @@
         Publications
       </h2>
       <div class="mt-2">
-        <div class="font-medium mb-2">A Mixed-initiative Data Wrangling System using Large Language Models</div>
-        <div class="mb-2"><strong>Wei-Hao Chen</strong>, Weixi Tong, Amanda Case, Tianyi Zhang</div>
-        <div class="italic mb-2">CHI'25: Proceedings of the 2025 Conference on Human Factors in Computing Systems (under review)</div>
-
+        <div class="font-medium mb-1">A Mixed-initiative Data Wrangling System using Large Language Models</div>
+        <div class="mb-1"><strong>Wei-Hao Chen</strong>, Weixi Tong, Amanda Case, Tianyi Zhang</div>
+        <div class="italic mb-1">CHI'25: Proceedings of the 2025 Conference on Human Factors in Computing Systems (under review)</div>
       </div>
 
       <div class="mt-2">
-        <div class="font-medium mb-2">Understanding the Coding Behavior of Data Scientists at the Action Level</div>
-        <div class="mb-2"><strong>Wei-Hao Chen</strong>, Jia Lin Cheoh, Manthan Keim, Sabine Brunswicker, Tianyi Zhang</div>
-        <div class="italic mb-2">ESEC/FSE'25: Proceedings of the 35th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (under review)</div>
+        <div class="font-medium mb-1">Understanding the Coding Behavior of Data Scientists at the Action Level</div>
+        <div class="mb-1"><strong>Wei-Hao Chen</strong>, Jia Lin Cheoh, Manthan Keim, Sabine Brunswicker, Tianyi Zhang</div>
+        <div class="italic mb-1">ESEC/FSE'25: Proceedings of the 35th ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (under review)</div>
       </div>
       <div class="mt-2">
-        <div class="font-medium mb-2">CCA-Secure Key-Aggregate Proxy Re-Encryption for Secure Cloud Storage</div>
-        <div class="mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</div>
-        <div class="italic mb-2">arXiv preprint arXiv:2410.08120</div>
+        <div class="font-medium mb-1">CCA-Secure Key-Aggregate Proxy Re-Encryption for Secure Cloud Storage</div>
+        <div class="mb-1"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</div>
+        <div class="italic mb-1">arXiv preprint arXiv:2410.08120</div>
         <div class="flex space-x-2">
           <a href="https://arxiv.org/abs/2410.08120" class="flex items-center hover:underline hover:font-medium hover:text-sky-600">
             <i class="fa-solid fa-file-pdf"></i><span class="ml-2">pdf</span>
@@ -90,11 +89,11 @@
         </div>
       </div>
       <div class="mt-2">
-        <div class="font-medium mb-2">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</div>
-        <div class="mb-2"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam, Zhicheng Huang, Rui
+        <div class="font-medium mb-1">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</div>
+        <div class="mb-1"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam, Zhicheng Huang, Rui
           Dong,
           Xinyu Wang, Tianyi Zhang</div>
-        <div class="italic mb-2">UIST 23: Proceedings of the 36th Annual ACM Symposium on User Interface Software and
+        <div class="italic mb-1">UIST 23: Proceedings of the 36th Annual ACM Symposium on User Interface Software and
           Technology</div>
         <div class="flex space-x-2">
           <a href="MIWA.pdf" class="flex items-center hover:underline hover:font-medium hover:text-sky-600">
@@ -106,18 +105,18 @@
         </div>
       </div>
       <div class="mt-2">
-        <div class="font-medium mb-2">Media playback apparatus and method having audio channel automatic selection mechanism</div>
-        <div class="mb-2"><strong>Wei-Hao Chen</strong></div>
-        <div class="italic mb-2">TW Patent TWI763,159 B</div>
+        <div class="font-medium mb-1">Media playback apparatus and method having audio channel automatic selection mechanism</div>
+        <div class="mb-1"><strong>Wei-Hao Chen</strong></div>
+        <div class="italic mb-1">TW Patent TWI763,159 B</div>
         <div class="flex space-x-2">
 
         </div>
       </div>
 
       <div class="mt-2">
-        <div class="font-medium mb-2">Efficient Key-Aggregate Proxy Re-Encryption for Secure Data Sharing in Clouds</div>
-        <div class="mb-2"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</div>
-        <div class="italic mb-2">2018 IEEE Conference on Dependable and Secure Computing (DSC)</div>
+        <div class="font-medium mb-1">Efficient Key-Aggregate Proxy Re-Encryption for Secure Data Sharing in Clouds</div>
+        <div class="mb-1"><strong>Wei-Hao Chen</strong>, Chun-I Fan, Yi-Fan Tseng</div>
+        <div class="italic mb-1">2018 IEEE Conference on Dependable and Secure Computing (DSC)</div>
         <div class="flex space-x-2">
           <a href="EFF.pdf" class="flex items-center hover:underline hover:font-medium hover:text-sky-600">
             <i class="fa-solid fa-file-pdf"></i><span class="ml-2">pdf</span>
