--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body class="text-slate-700 bg-gray-100 text-sm">
+<body class="text-slate-700 bg-gray-100 text-base tracking-normal">
   <div class="max-w-4xl mx-auto bg-white shadow-lg rounded-lg overflow-hidden">
     <!-- About Section -->
     <section id="about" class="px-6 py-8">
@@ -107,7 +107,7 @@
       <div class="mt-2">
         <div class="font-medium mb-1">Media playback apparatus and method having audio channel automatic selection mechanism</div>
         <div class="mb-1"><strong>Wei-Hao Chen</strong></div>
-        <div class="italic mb-1">TW Patent TWI763,159 B</div>
+        <div class="italic mb-1">US Patent US-20220174348-A1</div>
         <div class="flex space-x-2">
 
         </div>
