--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="grid grid-cols-1">
             <div>
               <h3 class="text-lg font-semibold mb-1">MIWA: Mixed-Initiative Web Automation for Better User Control and Confidence</h3>
-              <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, et al.</p>
+              <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Xiaoyu Liu, Jiacheng Zhang, Ian Iong Lam, Zhicheng Huang, Rui Dong, Xinyu Wang, Tianyi Zhang</p>
               <p class="text-sm italic mb-2">ACM Symposium on User Interface Software and Technology (UIST), 2023</p>
               <div class="flex space-x-4">
                 <a href="MIWA.pdf" class="text-sm text-sky-600 hover:text-sky-800">
